--- a/DataProtection2_9/Views/Shared/_Layout.cshtml
+++ b/DataProtection2_9/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RSA_Method">RSA Method</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DES_cipher">DES cipher</a>
+                        </li>
                     </ul>
                 </div>
             </div>
