--- a/DataProtection2_9/wwwroot/css/site.css
+++ b/DataProtection2_9/wwwroot/css/site.css
@@ -94,7 +94,13 @@ u-btn:active {
     transition: .3s box-shadow;
     width: 800px;
 }
-
+.inputDES {
+    background-color: #fafafa;
+    border: 0;
+    box-shadow: 0 0 4px rgba(0,0,0,0.3);
+    transition: .3s box-shadow;
+    width: 600px;
+}
 .in_bl {
     margin: 30px 100px 0px 0px;
 }
