--- a/DataProtection2_9/Views/Shared/_Layout.cshtml
+++ b/DataProtection2_9/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RSA_Method">RSA Method</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Diffy_Helman">Diffy Helman</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DES_cipher">DES cipher</a>
                         </li>
                     </ul>
