--- a/DataProtection2_9/Views/Home/RSA_Method.cshtml
+++ b/DataProtection2_9/Views/Home/RSA_Method.cshtml
@@ -51,8 +51,8 @@
     <input type="hidden" asp-for="text" />
     <div asp-validation-summary="All"></div>
 </form>
-<form asp-controller="Home" asp-action="Call_Generate" method="POST" source="custom" name="form" style="padding: 10px;">
-    <input type="submit" asp-action="Call_Generate" value="Обновить ключи" class="u-btn2">
+<form asp-controller="Home" asp-action="Call_GenerateRSA" method="POST" source="custom" name="form" style="padding: 10px;">
+    <input type="submit" asp-action="Call_GenerateRSA" value="Обновить ключи" class="u-btn2">
     <input type="hidden" asp-for="text" />
     <div asp-validation-summary="All"></div>
 </form>
