--- a/DataProtection2_9/Views/Shared/_Layout.cshtml
+++ b/DataProtection2_9/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DES_cipher">DES cipher</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PasswordHashing">Password Hashing</a>
+                        </li>
                     </ul>
                 </div>
             </div>
